# WinPipes-rs

./: Cargo.toml  README.md
src/: client.rs  lib.rs  server.rs
