[package]
name = "win-pipes"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_System_Pipes",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices",
    "Win32_System_IO",
]

[dependencies.windows-sys]
version = "0.52.0"
features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO"]
